test/bluejay/ill-typed/continuation_bind1.caprice
(* TEST
  include refutable;
*)

(* Continuation monad -- improper definition of bind *)

let t : type -> type -> type = fun a r -> { continuation : (a -> r) -> r }

let bind (type a' b' r') (ar_r : t a' r') : (a' -> t b' r') -> t b' r' =
  fun a_br_r ->
    { continuation = 
      fun br -> ar_r.continuation (fun a -> (a_br_r (br a)).continuation br) (* ERROR: should be `a_br_r a` *)
    }

let int_bind (type b_ r_) (i_br_r : int -> t b_ r_) : t b_ r_ =
  bind int b_ r_ { continuation = fun ir -> ir 0 } i_br_r
